| Bug #20725 | MySQLD cluster use "fast count" is broken | ||
|---|---|---|---|
| Submitted: | 27 Jun 2006 14:05 | Modified: | 29 Jun 2006 9:47 |
| Reporter: | Jonathan Miller | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 5.1.12 | OS: | Linux (Linux 32 bit OS) |
| Assigned to: | Stewart Smith | Target Version: | |
[27 Jun 2006 14:05]
Jonathan Miller
[27 Jun 2006 15:07]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/8324
[27 Jun 2006 15:28]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/8325
[28 Jun 2006 12:54]
Stewart Smith
pushed to 5.1 team tree
[29 Jun 2006 9:47]
Tomas Ulin
no need to document, bug never released
