BUG#20725 MySQLD cluster use "fast count" is broken

fix based on review by tomas.

conform to bug we haven't fixed yet.


sql/ha_ndbcluster.cc:
  return -1 on error in ::records().
  
  produces a compiler warning, a bug and is evil.
  
  however, until we go and really fix the bug properly, it's best to conform